# ipvc-c-final_project

./: .gitignore  CMakeLists.txt  README.md  TODOLIST.md  main.c
agents/: agents.c  agents.h
auth/: login.c  login.h  register.c  register.h
auth/users/: user.c  user.h
clients/: clients.c  clients.h
data/: agents.txt  agents_report.txt  clients.txt  financial_report.txt  properties.txt  visits.txt
data_base/: data_base.c  data_base.h
menus/admin_main_menu/: admin_main_menu.c  admin_main_menu.h
menus/agent_main_menu/: agent_main_menu.c  agent_main_menu.h
menus/agent_menu/: agent_menu.c  agent_menu.h
menus/client_main_menu/: client_main_menu.c  client_main_menu.h
menus/database_menu/: database_menu.c  database_menu.h
menus/main_menu/: main_menu.c  main_menu.h
menus/properties_menu/: properties_menu.c  properties_menu.h
properties/: properties.c  properties.h
role_agents/: role_agents.c  role_agents.h
utils/: utils.c  utils.h
